# ReCompose

./: .dockerignore  .gitignore  Dockerfile  README.md  handoff.md  pyproject.toml
api/: imaging.py  main.py  schemas.py  server.py
docs/: PLAN.md
recompose/: __init__.py  pipeline.py  saliency_stats.py  types.py
recompose/cropping/: __init__.py  candidates.py  constraints.py
recompose/perception/: __init__.py  detection.py  horizon.py  onnx_session.py  saliency.py
recompose/scoring/: __init__.py  rules.py
tests/: test_api.py  test_batching.py  test_candidates.py  test_constraints.py  test_crop_scorer.py  test_detection.py  test_gaicd_dataset.py  test_gaicd_parser.py  test_horizon.py  test_pipeline.py  test_rules.py  test_saliency_config.py  test_saliency_stats.py  test_static.py
training/: batching.py  gaicd.py  model.py
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  api.js  styles.css
web/src/components/: AfterView.jsx  BeforeView.jsx  Dropzone.jsx  ScorePanel.jsx
