[project]
name = "recompose"
version = "0.1.0"
description = "AI photo recomposition: subject-aware smart cropping with composition scoring"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.9",
    "pillow>=10.0",
    "onnxruntime>=1.17",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# Export-time only: turns yolov8n.pt into yolov8n.onnx. Never installed in
# the deployed runtime image - ultralytics pulls in CUDA-enabled torch,
# which is what OOMed Render's 512MB free tier in the first place.
export = [
    "ultralytics>=8.2",
    "onnx>=1.16",
]
# Training-time only (Phase 2): never installed in the deployed runtime
# image, which must stay within Render's 512MB - same rule as `export`.
train = [
    "torch>=2.2",
    "torchvision>=0.17",
    "timm>=1.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recompose"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
